--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -3,6 +3,10 @@ on:
   pull_request:
     branches: [main]
 
+permissions:
+  contents: read
+  pull-requests: write
+
 jobs:
   format:
     runs-on: ubuntu-latest
