--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -8,7 +8,7 @@ permissions:
   pull-requests: write
 
 jobs:
-  format:
+  fix-warnings:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
