--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -8,12 +8,14 @@ permissions:
 
 jobs:
   fix-warnings:
+    if: ${{ !contains(github.event.head_commit.commit_message, '[auto-commit]') }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           ref: ${{ github.head_ref }}
+          token: ${{ secrets.WRITABLE_ACTIONS_TOKEN }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -39,5 +41,5 @@ jobs:
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: Apply formatting changes
+          commit_message: "Apply formatting changes [skip autofix]"
           branch: ${{ github.head_ref }}
