Apply formatting changes [skip autofix]

--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -8,7 +8,7 @@ permissions:
 
 jobs:
   fix-warnings:
-    if: ${{ !contains(github.event.head_commit.commit_message, '[auto-commit]') }}
+    if: ${{ !contains(github.event.head_commit.commit_message, '[skip autofix]') }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
