--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -7,10 +7,31 @@ permissions:
   contents: write
 
 jobs:
+  check_skip_flags:
+    name: Check skip flags
+    runs-on: ubuntu-latest
+    outputs:
+      head-commit-message: ${{ steps.get_head_commit_message.outputs.headCommitMsg }}
+    steps:
+      - name: Get repo
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+      - name: Print head git commit message
+        id: get_head_commit_message
+        run: |
+          echo "::set-output name=headCommitMsg::$(git show -s --format=%s)"
+          echo "$(git show -s --format=%s)"
+
   fix-warnings:
-    if: ${{ !contains(github.event.head_commit.commit_message, '[skip autofix]') }}
+    needs: check_skip_flags
+    if: ${{ !contains(needs.check_skip_flags.outputs.head-commit-message, '[skip autofix]') }}
     runs-on: ubuntu-latest
     steps:
+      - name: Debug info
+        run: |
+          echo "${{ needs.check_skip_flags.outputs.head-commit-message }}"
+
       - name: Checkout
         uses: actions/checkout@v4
         with:
